// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`ProposalHeader UI Component renders correctly on  active computedStatus 1`] = `
Array [
  <div
    className="is-flex proposal-header-spacing "
  >
    <div
      className="columns flex-1 is-mobile has-text-grey m-0 p-0"
    >
      <div
        className="column is-narrow is-flex is-align-items-center pl-0"
      >
        <svg
          fill="none"
          height="15"
          viewBox="0 0 14 15"
          width="14"
          xmlns="http://www.w3.org/2000/svg"
        >
          <title>
            Active
          </title>
          <circle
            cx="7"
            cy="7.5"
            fill="#F4AF4A"
            opacity="0.5"
            r="7"
          />
          <circle
            cx="7"
            cy="7.5"
            fill="#F4AF4A"
            r="3"
          />
        </svg>
      </div>
      <div
        className="column pl-1 pr-1 is-flex is-align-items-center"
        style={
          Object {
            "flexBasis": "content",
          }
        }
      >
        <code
          className="has-text-grey"
        >
          Active: Ends in 10 days
        </code>
      </div>
      <div
        className="column is-flex is-align-items-center is-justify-content-end proposal-status p-0"
      >
        <code
          className="has-text-grey px-0 smaller-text"
        >
          <span
            className="has-text-white rounded-sm px-2 py-1 has-background-orange"
          >
            Voted
          </span>
        </code>
      </div>
    </div>
  </div>,
  <hr
    className="my-0"
  />,
]
`;

exports[`ProposalHeader UI Component renders correctly on  cancelled computedStatus 1`] = `
<div
  className="is-flex proposal-header-spacing has-background-white-ter rounded-top"
>
  <div
    className="columns flex-1 is-mobile has-text-grey m-0 p-0"
  >
    <div
      className="column is-narrow is-flex is-align-items-center pl-0"
    />
    <div
      className="column pl-1 pr-1 is-flex is-align-items-center"
      style={
        Object {
          "flexBasis": "content",
        }
      }
    >
      <code
        className="has-text-grey"
      />
    </div>
    <div
      className="column is-flex is-align-items-center is-justify-content-end proposal-status p-0"
    >
      <code
        className="has-text-grey px-0 smaller-text"
      >
        <span
          className="has-text-white rounded-sm px-2 py-1 has-background-grey"
        >
          Cancelled
        </span>
      </code>
    </div>
  </div>
</div>
`;

exports[`ProposalHeader UI Component renders correctly on  closed computedStatus 1`] = `
<div
  className="is-flex proposal-header-spacing has-background-white-ter rounded-top"
>
  <div
    className="columns flex-1 is-mobile has-text-grey m-0 p-0"
  >
    <div
      className="column is-narrow is-flex is-align-items-center pl-0"
    >
      <svg
        aria-hidden="true"
        className="svg-inline--fa fa-check-circle fa-w-16 "
        data-icon="check-circle"
        data-prefix="fas"
        focusable="false"
        height="15"
        role="img"
        viewBox="0 0 512 512"
        width="15"
        xmlns="http://www.w3.org/2000/svg"
      >
        <title>
          CheckCircle
        </title>
        <path
          d="M504 256c0 136.967-111.033 248-248 248S8 392.967 8 256 119.033 8 256 8s248 111.033 248 248zM227.314 387.314l184-184c6.248-6.248 6.248-16.379 0-22.627l-22.627-22.627c-6.248-6.249-16.379-6.249-22.628 0L216 308.118l-70.059-70.059c-6.248-6.248-16.379-6.248-22.628 0l-22.627 22.627c-6.248 6.248-6.248 16.379 0 22.627l104 104c6.249 6.249 16.379 6.249 22.628.001z"
          fill="currentColor"
        />
      </svg>
    </div>
    <div
      className="column pl-1 pr-1 is-flex is-align-items-center"
      style={
        Object {
          "flexBasis": "content",
        }
      }
    >
      <code
        className="has-text-grey"
      >
        This is decision text (12)
      </code>
    </div>
    <div
      className="column is-flex is-align-items-center is-justify-content-end proposal-status p-0"
    >
      <code
        className="has-text-grey px-0 smaller-text"
      >
        <span
          className="has-text-white rounded-sm px-2 py-1 has-background-grey"
        >
          Closed
        </span>
      </code>
    </div>
  </div>
</div>
`;

exports[`ProposalHeader UI Component renders correctly on  pending computedStatus 1`] = `
Array [
  <div
    className="is-flex proposal-header-spacing "
  >
    <div
      className="columns flex-1 is-mobile has-text-grey m-0 p-0"
    >
      <div
        className="column is-narrow is-flex is-align-items-center pl-0"
      />
      <div
        className="column pl-1 pr-1 is-flex is-align-items-center"
        style={
          Object {
            "flexBasis": "content",
          }
        }
      >
        <code
          className="has-text-grey"
        />
      </div>
      <div
        className="column is-flex is-align-items-center is-justify-content-end proposal-status p-0"
      >
        <code
          className="has-text-grey px-0 smaller-text"
        >
          <span
            className="has-text-white rounded-sm px-2 py-1 has-background-grey-light"
          >
            Pending
          </span>
        </code>
      </div>
    </div>
  </div>,
  <hr
    className="my-0"
  />,
]
`;
